crates/python_parser/tests/snapshots/invalid_syntax@expressions__parenthesized__missing_closing_paren_1.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/invalid/expressions/parenthesized/missing_closing_paren_1.py
---
## AST

```
Module(
    ModModule {
        range: 0..137,
        body: [
            Expr(
                ExprStmt {
                    range: 129..137,
                    value: BinOp(
                        BinOpExpr {
                            range: 132..137,
                            left: Name(
                                NameExpr {
                                    range: 132..133,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            op: Add,
                            right: Name(
                                NameExpr {
                                    range: 136..137,
                                    id: Name("y"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
4 | (
5 | 
6 | x + y
  |       Syntax Error: unexpected EOF while parsing
  |
